# testAutomation

pr-test-agent/: .env.example  Dockerfile  README.md  __main__.py  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt
pr-test-agent/agents/: __init__.py  orchestrator.py  pr_analyzer.py  test_generator.py  test_planner.py  test_runner.py
pr-test-agent/api/: main.py
pr-test-agent/cli/: main.py
pr-test-agent/config/: settings.py
pr-test-agent/integrations/: __init__.py  github_client.py  project_detector.py
pr-test-agent/mcp/: __init__.py  playwright_mcp_client.py
pr-test-agent/pr_test_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pr-test-agent/web/: index.html
